# mobius-user

./: .env.example  .gitignore  CONSUMER_RECIPE_ADMIN.md  CONSUMER_RECIPE_PROFILE.md  Dockerfile  INTEGRATION.md  README.md  SPEC.md  alembic.ini  pyproject.toml  requirements.txt
app/: main.py
app/static/: admin.html
deploy/: .gcloudignore  cloudbuild.yaml  dev.env
migrations/: env.py
migrations/versions/: 001_initial_user_schema.py  002_user_profile.py  003_identity_directory.py  004_auth_tokens.py  004_membership_org_slug.py  005_auth_tokens.py  006_membership_approval.py  007_hesitations.py  008_preference_audit.py  009_user_capabilities.py  010_membership_removal.py
mobius-auth/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
mobius-auth/src/: AuthModal.ts  AuthService.ts  PreferencesModal.ts  UserMenu.ts  index.ts  styles.ts  types.ts
mobius-auth/src/storage/: IStorageAdapter.ts  chromeStorageAdapter.ts  localStorageAdapter.ts
mobius_user/: __init__.py
mobius_user/db/: __init__.py  session.py
mobius_user/models/: __init__.py  activity.py  preference.py  tenant.py
mobius_user/routes/: __init__.py  admin.py  fastapi_auth.py  flask_auth.py  users.py
mobius_user/services/: __init__.py  account_lifecycle.py  auth_service.py  lifecycle_emails.py  prompt_builder.py  user_context.py  welcome_email.py
scripts/: backfill_user_profiles.py  create_db.sql  deploy.sh  run_migrations.py
tests/: test_account_lifecycle.py
